<resources>
    <string name="app_name">MichaelArkhangelskiy-final</string>
    <string name="title_home">News</string>
    <string name="title_dashboard">Launches</string>
    <string name="title_notifications">ISS</string>
    <string name="title_settings">Settings</string>
    <string name="title_saved">Saves</string>
    <string name="people">There are currently %1$d people in space</string>
    <string name="channel_name">main</string>
    <string name="channel_description">main channel</string>
    <string name="login_api">https://testing.mgelsk.com</string>
</resources>
