<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/baseline_menu_book_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/icons8rocket26"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/sputnik"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_saved"
        android:icon="@drawable/baseline_save_alt_black_24dp"
        android:title="@string/title_saved" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/sharp_settings_applications_black_24dp"
        android:title="@string/title_settings" />

</menu>
